--- a/contact.html
+++ b/contact.html
@@ -10,7 +10,7 @@
   <body>
     <div class="nav">
         <div  class="logo">
-            <img src="logo1.jpg"><h1>Helping<span>Hands</span></h1>  
+            <img src="logo1.jpg"><h1>Helping Hands</h1>  
         </div>
         <div class="links">
             <ul>
