--- a/about.html
+++ b/about.html
@@ -11,7 +11,7 @@
     <div class="container">
         <div class="nav">
             <div  class="logo">
-                <img src="logo1.jpg"><h1>Helpings <span>Hands</span></h1>
+                <img src="logo1.jpg"><h1>Helping <span>Hands</span></h1>
             </div>
             <div class="links">
                 <ul>
